--- a/ExampleApp/app/src/main/AndroidManifest.xml
+++ b/ExampleApp/app/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/pap_AppTheme"
         tools:replace="android:theme"
         tools:targetApi="31">
         <activity
-            android:name=".BaseActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
