--- a/ExampleApp/app/src/main/AndroidManifest.xml
+++ b/ExampleApp/app/src/main/AndroidManifest.xml
@@ -4,15 +4,15 @@
     package="com.papilon.tacirlersdk">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/pap_AppTheme"
-        tools:replace="android:theme"
+        android:theme="@style/AppThemeLight"
+        tools:replace="android:theme,android:allowBackup"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
