--- a/ExampleApp/app/build.gradle
+++ b/ExampleApp/app/build.gradle
@@ -102,7 +102,8 @@ dependencies {
     //----------------
 
     // IMPORT AAR FILE METHOD ----------
-    implementation files('../app/libs/PapilonDobSdk-v.0.0.45.aar')
+    //implementation files('../app/libs/PapilonDobSdk-v.0.0.45.aar')
+    implementation files('../app/libs/PapilonDobSdk-v.0.0.46.aar')
     //----------------
 }
 
